# waggle

./: .gitignore  CHANGELOG.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_bee_counts_and_correlation_alerts.py  003_add_vision_cloud_sync.py
backend/tests/: conftest.py  test_admin_auth.py  test_alert_correlation.py  test_alert_engine.py  test_api_detections.py  test_api_photo_image.py  test_api_photos.py  test_api_varroa.py  test_app.py  test_auth.py  test_bridge.py  test_camera_nodes.py  test_cloud_sync.py  test_cobs.py  test_config.py  test_crc8.py  test_database.py  test_health.py  test_hives_phase3.py  test_ingestion.py  test_ingestion_traffic.py  test_inspections.py  test_integration.py  test_integration_phase3.py  test_logging_config.py  test_migration_002.py  test_migration_003.py  test_ml_alerts.py  test_ml_worker.py  test_models.py  test_payload.py  test_photo_cleanup.py  test_photo_pruning.py  test_photo_upload.py  test_schemas.py  test_sync_integration.py  test_sync_status.py  test_timestamps.py  test_weather.py  test_webhooks.py
backend/tests/test_api/: conftest.py  test_alerts.py  test_app.py  test_hives.py  test_readings.py  test_status.py  test_traffic.py
backend/waggle/: __main__.py  auth.py  config.py  database.py  health.py  logging_config.py  main.py  models.py  schemas.py
backend/waggle/routers/: admin.py  alerts.py  detections.py  hives.py  inspections.py  photos.py  readings.py  status.py  sync.py  traffic.py  varroa.py  weather.py
(+105 files in other folders)
